--- a/my_app/messageboard/templates/base.html
+++ b/my_app/messageboard/templates/base.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<title></title>
 </head>
 <body>
