add login form template

--- a/my_app/messageboard/templates/index.html
+++ b/my_app/messageboard/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	
+	<a href="{% url 'login' %}">Login</a>
 	{% if all_messages %}
 		{% for message in all_messages %}
 			<p>{{ message.text }}</p>
