--- a/my_app/messageboard/templates/login.html
+++ b/my_app/messageboard/templates/login.html
@@ -1,17 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>login</p>
-<form method="POST">
-	{% csrf_token %}
-  <div>
-    <input type="text" placeholder="email@example.com" name="username">
-  </div>
-  <div>
-    <input type="password" placeholder="Password" name="password">
-  </div>
-  <div>
-  </div>
-  <button type="submit">Sign in</button>
-</form>
+<div class="container text-center mt-5">
+  <h1>Login</h1>
+  <form method="POST">
+    {% csrf_token %}
+    <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username" name="username"> 
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" placeholder="Password" name="password">
+    </div>
+    <button type="submit" class="btn btn-primary">Sign In</button>
+  </form>
+</div>
+
 {% endblock %}
