--- a/my_app/messageboard/templates/main.html
+++ b/my_app/messageboard/templates/main.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+	<div class="container text-center mt-5">
 	{% if all_messages %}
 		{% for message in all_messages %}
 			<p>{{ message.text }}</p>
 			<p>{{ message.author }}</p>
 		{% endfor %}
-	{% endif %}
+	{% endif %}	
+	</div>
+	
 
 {% endblock %}
