--- a/my_app/messageboard/templates/index.html
+++ b/my_app/messageboard/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<a href="{% url 'login' %}">Login</a>
-
+	<div class="container text-center">
+	<h1 class="mt-5"><a href="{% url 'login' %}">Login</a></h1>
+	</div>
 {% endblock %}
