--- a/my_app/messageboard/templates/main.html
+++ b/my_app/messageboard/templates/main.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 	<div class="container text-center mt-5">
+	{% if user.is_authenticated %}
+		<a href="#">Logout</a>
+	{% else %}
+	{% endif %}
 	{% if all_messages %}
 		{% for message in all_messages %}
 			<p>{{ message.text }}</p>
