--- a/my_app/messageboard/templates/base.html
+++ b/my_app/messageboard/templates/base.html
@@ -8,6 +8,15 @@
 	<title></title>
 </head>
 <body>
+	<div class="container">
+		{% if messages %}
+			{% for message in messages %}
+				<div class="alert alert-danger" role="alert">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endif %}
+	</div>
 {% block content %}
 {% endblock %}
 </body>
