--- a/my_app/messageboard/templates/index.html
+++ b/my_app/messageboard/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Start{% endblock %}
 {% block content %}
 	<div class="container text-center">
 	<h1 class="mt-5"><a href="{% url 'login' %}">Login</a></h1>
