--- a/my_app/messageboard/templates/login.html
+++ b/my_app/messageboard/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Login{% endblock %}
 {% block content %}
 <div class="container text-center mt-5">
   <h1>Login</h1>
