--- a/my_app/messageboard/templates/main.html
+++ b/my_app/messageboard/templates/main.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Main{% endblock %}
 {% block content %}
 	<div class="container text-center mt-5">
 	{% if user.is_authenticated %}
